<?xml version="1.0"?>
<package format="3">
  <name>astra_pixel_distance</name>
  <version>0.1.0</version>
  <description>Compute distance at pixel coordinates using astra_camera depth.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>